# auth

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.changeset/: README.md  config.json  dpop-and-email-free.md  initial-release.md  refresh-resilience-and-backchannel-receiver.md  sender-constrained-and-stepup.md  silent-sso.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  scheduled-audit.yml
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/e2e/: auth.spec.ts  start-api.sh
apps/web/src/: index.css  main.tsx  router.tsx
apps/web/src/components/: AuthCard.tsx  ConfirmDelete.tsx  CopyField.tsx  OtpEnrollFlow.tsx  RenamePasskeyDialog.tsx  SecurityCheckup.tsx  ShowOnceCodes.tsx  Time.tsx
apps/web/src/hooks/: useAccountMutation.ts  useIsMobile.ts  useTitle.ts
apps/web/src/lib/: aaguid.json  account-nav.ts  api.ts  initials.ts  return-to.ts  time.ts  webauthn.ts
apps/web/src/routes/: _centered.tsx  root.tsx  (+8 more)
config/: clients.json
crates/auth-service/: Cargo.toml
crates/auth-service/src/: config.rs  crypto.rs  error.rs  lib.rs  main.rs  openapi.rs  state.rs
crates/auth-service/src/api/: account.rs  dev.rs  mod.rs  recovery.rs  reports.rs  session.rs  signup.rs  webauthn.rs
crates/auth-service/src/domain/: credential.rs  mod.rs  oauth.rs  otp.rs  session.rs  user.rs
crates/auth-service/src/email/: mod.rs  templates.rs
crates/auth-service/src/jwt/: claims.rs  kms.rs  local.rs  mod.rs
crates/auth-service/src/middleware/: csrf.rs  mod.rs  origin.rs
crates/auth-service/src/oidc/: authorize.rs  cors.rs  discovery.rs  dpop.rs  jwks.rs  logout.rs  mod.rs  pkce.rs  revoke.rs  security_txt.rs  token.rs  userinfo.rs
crates/auth-service/src/session/: extract.rs  logout.rs  mod.rs
crates/auth-service/src/store/: ceremonies.rs  credentials.rs  dpop.rs  mod.rs  oauth.rs  otp.rs  pow.rs  rate_limit.rs  recovery_codes.rs  schema.rs  sessions.rs  users.rs
crates/auth-service/tests/: account_lifecycle.rs  credential_lifecycle.rs  dpop_flow.rs  hardening.rs  logout.rs  oidc_flow.rs  props.rs  recovery_flow.rs  refresh_rotation.rs  signup_flow.rs  webauthn_flow.rs
crates/auth-service/tests/harness/: flows.rs  mod.rs
docs/: deploy.md  oidc-integration.md  security-review.md
docs/research/: aws-deploy.md  design-repo.md  rust-auth-stack.md  sso-patterns.md  ts-sdk.md
infra/: cdk.json  package.json  tsconfig.json
infra/assets/lambda-bootstrap/: bootstrap
infra/assets/spa-placeholder/: index.html
infra/config/: environments.ts  prod.ts  types.ts
infra/lib/stacks/: app-stack.ts  ci-role-stack.ts  stateful-stack.ts
infra/scripts/: seed.ts
infra/test/: synth.test.ts
openapi/: openapi.json
(+5 files in other folders)
